--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,15 @@
-.App {
-  text-align: center;
-}
+:root{
+  --white1: #ffffff;
+  --black1: #000000;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+  --textgrey: #6B6F75;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+  --grey1: #dfe4e9;
+  --grey2: #e4e5e8;
+  --grey3: #F8F8FA;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.board-details{
+  height: 100vh;
+  background-color: var(--grey2);
 }
