--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -14,6 +14,7 @@
     padding: .4rem .8rem;
     width: fit-content;
     border: 1px solid var(--grey1);
+    box-shadow: 0px 0px 5px 2px var(--grey1);
     border-radius: .4rem;
     cursor: pointer;
 }
@@ -44,6 +45,7 @@
     display: none;
     width: fit-content;
     position: absolute;
+    z-index: 2;
     margin-top: .6rem;
     padding: .8rem 1rem;
     background-color: var(--grey3);
