--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,10 +1,11 @@
 .card-container{
-    width: 300px;
+    width: 100%;
     padding: 1rem;
     border-radius: .5rem;
     border: 1px solid #ccc;
-    box-shadow: 0px 0px 5px 2px #ccc;
-    background-color: var(--white1); 
+    box-shadow: 0px 2px 8px 1px #ccc;
+    background-color: var(--white1);
+    cursor: pointer;
 }
 .card-id-wrapper{
     display: flex;
